--- a/study/package.json
+++ b/study/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "ahooks": "^3.1.14",
     "lodash": "^4.17.19",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
@@ -18,7 +19,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "swr": "^0.2.3",
-    "typescript": "~3.7.2"
+    "typescript": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
